# a_relativistic_jet-pack

./: .gitignore  README.md  compile.sh  copy.py  meson.build
src/: 4d_sdf.cpp  camera.hpp  glad.c  shader_utils.cpp  shader_utils.hpp
src/shaders/: 3d_sdfs.cs.glsl  4d_sdfs.cs.glsl  4d_sdfs_bad_4vectors.cs.glsl  4d_sdfs_stationary.cs.glsl  frag_shader.fs.glsl  vert_shader.vs.glsl
